Non authed sharing, minor markup and css change for heading.

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -27,7 +27,7 @@ article
 
 .intro-logo,
 .intro-starts,
-.intro-100m
+.intro-starts em
   margin: 0
 
 .intro-logo
@@ -48,7 +48,10 @@ article
   text-align: center
   margin-top: 25px
 
-.intro-100m
+.intro-starts em
+  font-style: normal
+  letter-spacing: normal
+  display: block
   font: 240px 'BebasNeueRegular', arial, sans-serif
   line-height: 220px
   color: #435971
@@ -234,7 +237,7 @@ footer
     font-size: 26px
     margin-top: 2%
 
-  .intro-100m
+  .intro-starts em
     font: 240px 'BebasNeueRegular', arial, sans-serif
     margin-top: .5%
 
