Added banner for bible app to footer

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -206,6 +206,32 @@ article
 
 footer
   margin: 30px 0
+  padding-top: 20px
+
+.ad-title,
+.ad-copy
+  display: block
+  background-color: #435971
+  color: #dedede
+
+.ad-title
+  border-radius: 5px 5px 0 0
+  padding: 15px 10px 3px 145px
+  font-size: 18px
+  font-weight: bold
+
+.ad-copy
+  border-radius: 0 0 5px 5px
+  padding: 2px 10px 15px 145px
+  font-size: 15px
+
+  a
+    color: #00BFFF
+    text-decoration: none
+
+.ad-img
+  display: block
+  margin: -83px 0 0 30px
 
 // ------------------------- Mobile styles
 
