--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -14,9 +14,11 @@
         %h1.intro-logo
           YouVersion: The Bible app
         %h2.intro-starts
-          It starts with
+          %span
+            It starts with
           %em
             100 million
+        %img{ src: "/assets/campaigns/100m/bg.jpg", class: "world-map"}
         %p.intro-copy
           Can the Bible App reach 100 million installs before our 5th anniversary on July 10th? Only with your help!
 
