--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -96,8 +96,8 @@
             Let’s make history together.
 
       %footer
+        = image_tag "campaigns/100m/app-icon.png", class: "ad-img"
         %p.ad-title
-          The Bible App from YouVersion is completely free and a great way to explore the Bible.
+          The Bible App is completely free and a great way to explore the Bible.
         %p.ad-copy
           Read, Listen, Watch, Share. Get the Bible App for your smartphone or tablet: <a href="#">bible.com</a>
-        = image_tag "campaigns/100m/app-icon.png", class: "ad-img"
