--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -375,7 +375,7 @@ footer
     margin: 1% 0
 
 /* Smartphones (portrait) ----------- */
-@media only screen and (min-width : 320px)
+@media only screen and (max-width : 320px)
 
   .intro-logo
     background-size: 65%
