--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -3,8 +3,8 @@
   %head
     = stylesheet_link_tag "campaigns/100m"
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
+    = javascript_include_tag "campaigns/100m/jquery.counter.js"
     = javascript_include_tag "campaigns/100m/jquery.countdown.min.js"
-    = javascript_include_tag "campaigns/100m/counter_mini.js"
 
   %body
 
@@ -19,7 +19,7 @@
             It starts with
           %em
             100 million
-        %img{ src: "/assets/campaigns/100m/bg.jpg", class: "world-map"}
+        %img.world-map{ src: "/assets/campaigns/100m/bg.jpg"}
         %p.intro-copy
           Can the Bible App reach 100 million installs before our 5th anniversary on July 10th? Only with your help!
 
@@ -46,69 +46,43 @@
             Email
 
       -# App ticker
-      .ticker
-        -# Each cluster of three numbers is grouped
-        %span.ticker-group-1
-          %span.ticker-1
-            0
-          %span.ticker-2
-            0
-          %span.ticker-3
-            0
-        %span.ticker-group-2
-          %span.ticker-4
-            0
-          %span.ticker-5
-            0
-          %span.ticker-6
-            0
-        %span.ticker-group-3
-          %span.ticker-7
-            0
-          %span.ticker-8
-            0
-          %span.ticker-9
-            0
-      .ticker-divider
+      #counter
+      #counter-divider
         = image_tag "campaigns/100m/ticker-divider.png"
-
-
-      #counter{style: "color:#FFF;"}
 
       #date_countdown
 
       -# Day counter
       :javascript
 
+        function colonize(nStr)
+        {
+          nStr += '';
+          var rgx = /(\d+)(\d{3})/;
+          while (rgx.test(nStr)) { nStr = nStr.replace(rgx, '$1' + ':' + '$2');}
+          return nStr;
+        }
+
+
         function installs_data(data) {
           STATS = data;
+
           var start_count = STATS.start_count;
           var start_date = STATS.start_date;
           var average_per_day = STATS.average_per_day;
 
-          var single_pace = 950;
-
-          // Todays Unix type timestamp (seconds):
           var today_date = Math.round((new Date()).getTime() / 1000);
-          // Approximate days since start_time (seconds):
           var date_difference_seconds = Math.abs(today_date - start_date);
           var date_difference_days = Math.round(date_difference_seconds / 86400);
-          // Corrected total downloads (to start the counter with):
-          // tcg updated corrected_total_downloads and start_date/start_count on
-          // Oct 18, 2012 -- via: https://sprint.ly/product/390/#!/item/223
           var corrected_total_downloads = Math.round(start_count + (average_per_day*date_difference_days));
-          //var myCounter = new flipCounter('counter', {value: corrected_total_downloads, inc: 1, pace: single_pace, auto:true, tFH: 55, bFH: 55, fW: 82 });
 
+          $("#counter").counter({
+            direction: "up",
+            format: "999:999:999",
+            stop: "100:000:000",
+            initial: colonize(corrected_total_downloads)
+          });
 
-          var config = {
-            digitsNumber : 10,
-            direction : Counter.ScrollDirection.Upwards,
-            characterSet : Counter.DefaultCharacterSets.numericUp
-          };
-
-          var myCounter = new Counter("counter", config);
-
-              myCounter.setValue(corrected_total_downloads, 1000);
         }
 
         (function() {
@@ -119,9 +93,6 @@
           $.getScript('http://installs.youversion.com/stats_jsonp.js');
 
         })();
-
-
-
 
 
       -# Video
@@ -142,5 +113,10 @@
         = image_tag "campaigns/100m/app-icon.png", class: "ad-img"
         %p.ad-title
           The Bible App is completely free and a great way to explore the Bible.
+
         %p.ad-copy
-          Read, Listen, Watch, Share. Get the Bible App for your smartphone or tablet: <a href="#">bible.com</a>
+          Read, Listen, Watch, Share. Get the Bible App for your smartphone or tablet:
+          %a{href:"http://bible.com/app"} Download Now
+
+        = link_to("http://bible.com/app") do
+          = image_tag "campaigns/100m/app-icon.png", class: "ad-img"
