--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -207,7 +207,10 @@ a
 
 footer
   margin: 30px 0
-  padding-top: 20px
+  padding: 20px 0px
+  overflow: hidden
+  background: #435971
+  border-radius: 10px
 
 .ad-title,
 .ad-copy
@@ -216,13 +219,11 @@ footer
   color: #dedede
 
 .ad-title
-  border-radius: 5px 5px 0 0
   padding: 15px 10px 3px 145px
   font-size: 18px
   font-weight: bold
 
 .ad-copy
-  border-radius: 0 0 5px 5px
   padding: 2px 10px 15px 145px
   font-size: 15px
 
@@ -232,7 +233,8 @@ footer
 
 .ad-img
   display: block
-  margin: -83px 0 0 30px
+  margin: 0px 0px 0px 20px
+  float: left
 
 // ------------------------- Mobile styles
 
