retargeted markup for mobile and restyled counter and footer

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -383,11 +383,11 @@ footer
 
 
     span
-      width: 100%
+      width: 95%
       display: block
       text-align: center
       margin: 0 auto
-      padding-left: 10px
+      padding-left: 5%
 
     em
       font-size: 95px
@@ -433,36 +433,32 @@ footer
     .countdown_amount
       font-size: 34px
 
-  .ticker
+  #counter
     margin-top: 60px
-    background-position: 9px 40px
-    background-size: 97%
+    background-position: 0px 40px
+    background-size: 100%
 
-  .ticker-group-1,
-  .ticker-group-2,
-  .ticker-group-3
-    margin-left: 3%
+    .part
+      margin-left: 4%
+      width: 30%
 
+    .part0
+      margin-left: 1%
 
-  .ticker-1,
-  .ticker-2,
-  .ticker-3,
-  .ticker-4,
-  .ticker-5,
-  .ticker-6,
-  .ticker-7,
-  .ticker-8,
-  .ticker-9
-    font-size: 48px
-    width: 32%
-    margin-left: 1%
-    background-position: center 2px
-    border-radius: 7px
+    .digit
+      font-size: 48px
+      width: auto !important
+      margin-left: 4%
+      padding: 0 4%
+      background-position: center 2px
+      border-radius: 7px
 
-  .ticker-divider
+  #counter-divider
+    margin-top: -38px
+
     img
-      width: 95%
-      margin-left: 3%
+      width: 96%
+      margin-left: 2%
 
   .video-box
     iframe
@@ -477,9 +473,9 @@ footer
     padding: 5% 5%
 
   footer
-    width: 90%
+    width: 80%
     padding: 0 5%
-    margin: 0px 0px 40px
+    margin: 0px 5% 40px
 
     .ad-img
       float: left
