tweaking fonts and font CSS for Firefox

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -1,11 +1,12 @@
 @font-face
-  font-family: 'BebasNeueRegular'
-  src: url('../fonts/BebasNeue-webfont.eot')
-  src: url('../fonts/BebasNeue-webfont.woff') format('woff')
-  src: url('../fonts/BebasNeue-webfont.ttf') format('truetype')
-  src: url('../fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg')
-  font-weight: normal
-  font-style: normal
+    font-family: 'bebas_neueregular';
+    src: url('../fonts/bebasneue-webfont-webfont.eot');
+    src: local('☺'), url('../fonts/bebasneue-webfont-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/bebasneue-webfont-webfont.woff') format('woff'),
+         url('../fonts/bebasneue-webfont-webfont.ttf') format('truetype'),
+         url('../fonts/bebasneue-webfont-webfont.svg#bebas_neueregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
 // ------------------------ Desktop styles
 
@@ -57,7 +58,7 @@ a
   font-style: normal
   letter-spacing: normal
   display: block
-  font: 240px 'BebasNeueRegular', arial, sans-serif
+  font: 240px 'bebas_neueregular', arial, sans-serif
   line-height: 220px
   color: #435971
   text-align: center
@@ -259,7 +260,7 @@ footer
     margin-top: 2%
 
   .intro-starts em
-    font: 240px 'BebasNeueRegular', arial, sans-serif
+    font: 240px 'bebas_neueregular', arial, sans-serif
     margin-top: .5%
 
   .intro-copy
