--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -1,12 +1,12 @@
 @font-face
-    font-family: 'bebas_neueregular';
-    src: url('../fonts/bebasneue-webfont-webfont.eot');
+    font-family: 'bebas_neueregular'
+    src: url('../fonts/bebasneue-webfont-webfont.eot')
     src: local('☺'), url('../fonts/bebasneue-webfont-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/bebasneue-webfont-webfont.woff') format('woff'),
          url('../fonts/bebasneue-webfont-webfont.ttf') format('truetype'),
-         url('../fonts/bebasneue-webfont-webfont.svg#bebas_neueregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
+         url('../fonts/bebasneue-webfont-webfont.svg#bebas_neueregular') format('svg')
+    font-weight: normal
+    font-style: normal
 
 // ------------------------ Desktop styles
 
