--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -1,12 +1,12 @@
 @font-face
-    font-family: 'bebas_neueregular'
-    src: url('../fonts/bebasneue-webfont-webfont.eot')
-    src: local('☺'), url('../fonts/bebasneue-webfont-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/bebasneue-webfont-webfont.woff') format('woff'),
-         url('../fonts/bebasneue-webfont-webfont.ttf') format('truetype'),
-         url('../fonts/bebasneue-webfont-webfont.svg#bebas_neueregular') format('svg')
-    font-weight: normal
-    font-style: normal
+  font-family: 'bebas_neueregular'
+  src: url('../fonts/bebasneue-webfont-webfont.eot')
+  src: url('../fonts/bebasneue-webfont-webfont.eot?#iefix') format('embedded-opentype')
+  src: url('../fonts/bebasneue-webfont-webfont.woff') format('woff')
+  src: url('../fonts/bebasneue-webfont-webfont.ttf') format('truetype')
+  src: url('../fonts/bebasneue-webfont-webfont.svg#bebas_neueregular') format('svg')
+  font-weight: normal
+  font-style: normal
 
 // ------------------------ Desktop styles
 
@@ -58,7 +58,7 @@ a
   font-style: normal
   letter-spacing: normal
   display: block
-  font: 240px 'bebas_neueregular', arial, sans-serif
+  font: 240px 'bebas_neue', arial, sans-serif
   line-height: 220px
   color: #435971
   text-align: center
@@ -260,7 +260,7 @@ footer
     margin-top: 2%
 
   .intro-starts em
-    font: 240px 'bebas_neueregular', arial, sans-serif
+    font: 240px 'bebas_neue', arial, sans-serif
     margin-top: .5%
 
   .intro-copy
@@ -374,10 +374,10 @@ footer
 @media only screen and (max-width : 320px)
 
   .intro-logo
-    background-size: 65%
+    background-size: 75%
 
   .intro-starts
-    letter-spacing: 0.60em
+    letter-spacing: 0.4em
     font-size: 22px
     margin-top: 60px
     padding-left: 0px
@@ -391,24 +391,26 @@ footer
       padding-left: 5%
 
     em
-      font-size: 95px
+      font-size: 2.8em
+      font-weight: bold
 
   .intro-copy
     padding: 0px 20px
-    font-size: 16px
+    font-size: 14px
 
   .share-copy
     margin: 50px 0px 30px
+    letter-spacing: 0.4em
 
 
   .share-fb,
   .share-tw,
   .share-em
-    width: 90%
+    width: 53%
     margin: 0 auto 20px
-    padding: 8px 0px
-    background-position: 85px 5px !important
-
+    padding: 8px 0px 8px 34%
+    background-position: 26% center !important
+    text-align: left
 
   // ---- Counter
 
@@ -436,7 +438,7 @@ footer
 
   #counter
     margin-top: 60px
-    background-position: 0px 40px
+    background-position: 0px 30px
     background-size: 100%
 
     .part
@@ -447,7 +449,7 @@ footer
       margin-left: 1%
 
     .digit
-      font-size: 48px
+      font-size: 35px
       width: auto !important
       margin-left: 4%
       padding: 0 4%
@@ -469,7 +471,7 @@ footer
 
   .video-copy
     width: 90%
-    font-size: 16px
+    font-size: 14px
     float: none
     padding: 5% 5%
 
@@ -480,5 +482,12 @@ footer
 
     .ad-img
       float: left
-      margin: 20px 0 0 20px
+      margin: 20px 0 0 0
+      width: 24%
+
+    .ad-title
+      padding: 15px 0px 6px 102px
+
+    .ad-copy
+      padding: 10px 10px 15px 1px
 
