added image for 100 million text and built for retina

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -58,12 +58,15 @@ a
   font-style: normal
   letter-spacing: normal
   display: block
-  font: 240px 'bebas_neue', arial, sans-serif
-  line-height: 220px
   color: #435971
   text-align: center
   text-transform: uppercase
   margin-top: 5px
+  text-indent: -99999px
+
+.intro-title
+  width: 90%
+  margin: 0 5%  
 
 .intro-copy
   font-size: 20px
@@ -260,8 +263,12 @@ footer
     margin-top: 2%
 
   .intro-starts em
-    font: 240px 'bebas_neue', arial, sans-serif
     margin-top: .5%
+    text-indent: -99999px
+
+  .intro-title
+    width: 90%
+    margin: 0 5% 
 
   .intro-copy
     font-size: 20px
@@ -381,7 +388,7 @@ footer
     font-size: 22px
     margin-top: 60px
     padding-left: 0px
-
+    line-height: 14px
 
     span
       width: 95%
@@ -390,13 +397,9 @@ footer
       margin: 0 auto
       padding-left: 5%
 
-    em
-      font-size: 2.8em
-      font-weight: bold
-
   .intro-copy
     padding: 0px 20px
-    font-size: 14px
+    font-size: 16px
 
   .share-copy
     margin: 50px 0px 30px
