--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -16,6 +16,7 @@
           = t("campaigns.100m.logo")
         %h1.intro-starts
           = t("campaigns.100m.tagline").html_safe
+        %img.intro-title{ src: "/assets/campaigns/100m/100m.png"}
         %img.world-map{ src: "/assets/campaigns/100m/bg.jpg"}
         %p.intro-copy
           = t("campaigns.100m.intro")
