--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -66,7 +66,7 @@ a
 
 .intro-title
   width: 90%
-  margin: 0 5%  
+  margin: 0 5%
 
 .intro-copy
   font-size: 20px
@@ -125,9 +125,8 @@ a
   padding-left: 30px
   width: 278px
 
+
 // ---- Ticker
-
-
 
 #counter
   margin-top: 75px
@@ -162,6 +161,7 @@ a
 #counter-divider
   margin-top: -82px
 
+
 // ---- Counter
 
 #date_countdown
@@ -186,6 +186,7 @@ a
   .countdown_amount
     font-size: 84px
 
+
 // ---- Video
 
 .video
@@ -207,14 +208,13 @@ a
     margin-bottom: 14px
     line-height: 1.8em
 
+
 // ---- Footer
 
 footer
   margin: 30px 0
   padding: 20px 0px
   overflow: hidden
-  background: #435971
-  border-radius: 10px
 
 .ad-title,
 .ad-copy
@@ -226,10 +226,12 @@ footer
   padding: 15px 10px 3px 145px
   font-size: 18px
   font-weight: bold
+  border-radius: 5px 5px 0 0
 
 .ad-copy
   padding: 2px 10px 15px 145px
   font-size: 15px
+  border-radius: 0 0 5px 5px
 
   a
     color: #00BFFF
@@ -237,8 +239,9 @@ footer
 
 .ad-img
   display: block
-  margin: 0px 0px 0px 20px
+  margin: -10px 0 0 20px
   float: left
+
 
 // ------------------------- Mobile styles
 
@@ -268,7 +271,7 @@ footer
 
   .intro-title
     width: 90%
-    margin: 0 5% 
+    margin: 0 5%
 
   .intro-copy
     font-size: 20px
@@ -377,16 +380,18 @@ footer
   footer
     margin: 1% 0
 
+
 /* Smartphones (portrait) ----------- */
+
 @media only screen and (max-width : 320px)
 
   .intro-logo
     background-size: 75%
 
   .intro-starts
-    letter-spacing: 0.4em
+    letter-spacing: 0
     font-size: 22px
-    margin-top: 60px
+    margin-top: 10px
     padding-left: 0px
     line-height: 14px
 
@@ -400,10 +405,12 @@ footer
   .intro-copy
     padding: 0px 20px
     font-size: 16px
+    margin-top: 10px
 
   .share-copy
-    margin: 50px 0px 30px
-    letter-spacing: 0.4em
+    margin: 25px 0px 15px
+    letter-spacing: 0
+    font-size: 16px
 
 
   .share-fb,
@@ -419,7 +426,7 @@ footer
 
   #date_countdown
     clear: both
-    margin: 50px auto 100px
+    margin: 50px auto 20px
     overflow: hidden
     width: 100%
     color: #96999D
@@ -440,7 +447,7 @@ footer
       font-size: 34px
 
   #counter
-    margin-top: 60px
+    margin-top: 20px
     background-position: 0px 30px
     background-size: 100%
 
@@ -482,6 +489,9 @@ footer
     width: 80%
     padding: 0 5%
     margin: 0px 5% 40px
+    background-color: #435971
+    border-radius: 5px
+    overflow: hidden
 
     .ad-img
       float: left
@@ -489,8 +499,10 @@ footer
       width: 24%
 
     .ad-title
-      padding: 15px 0px 6px 102px
+      padding: 15px 0px 6px 75px
+      background-color: none
 
     .ad-copy
       padding: 10px 10px 15px 1px
+      background-color: none
 
