--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -16,8 +16,8 @@
           = t("campaigns.100m.logo")
         %h1.intro-starts
           = t("campaigns.100m.tagline").html_safe
-        %img.intro-title{ src: "/assets/campaigns/100m/100m.png"}
-        %img.world-map{ src: "/assets/campaigns/100m/bg.jpg"}
+        %img.intro-title{ src: "/assets/campaigns/100m/100m.png", alt: "It starts with 100 million"}
+        %img.world-map{ src: "/assets/campaigns/100m/bg.jpg", alt: "Map of the world"}
         %p.intro-copy
           = t("campaigns.100m.intro")
 
@@ -105,9 +105,8 @@
           %p= t("campaigns.100m.body.p4")
 
       %footer
-        = link_to("http://bible.com/app") do
-          = image_tag "campaigns/100m/app-icon.png", class: "ad-img"
-          
+        = image_tag "campaigns/100m/app-icon.png", class: "ad-img"
+
         %p.ad-title
           = t("campaigns.100m.ad.title")
 
