--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -8,7 +8,8 @@
     = javascript_include_tag "campaigns/100m/jquery.countdown.min.js"
     = render '/shared/google_analytics'
     %link{rel: "shortcut icon", href:"/favicon.ico"}
-    %meta{:charset => 'utf-8'}
+    %meta{charset:"utf-8"}
+    %meta{name: "viewport", content: "width=device-width, target-densitydpi=160, initial-scale=1.0"}
   %body
 
     %article
