Hide divider for small screens, not displaying correctly.

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -339,6 +339,9 @@ footer
 
   // ---- Counter
 
+  #counter-divider
+    display: none
+
   .counter
     clear: both
     margin: 15% auto 0
@@ -467,11 +470,7 @@ footer
       border-radius: 7px
 
   #counter-divider
-    margin-top: -38px
-
-    img
-      width: 96%
-      margin-left: 2%
+    display: none
 
   .video-box
     iframe
