Sidebar ad for 100m campaign.

--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -490,3 +490,38 @@ html.mobile-client
 
   .widget-notice
     display: none
+
+
+
+// --- Custom widgets ------
+
+#widget-100m-ad
+  width: 300px
+  height: 270px
+  position: relative
+  margin-bottom: 10px
+
+  img
+    display: block
+    position: absolute
+    top: 0
+    left: 0
+
+  .cta-100m
+    position: absolute
+    top: 180px
+    left: 20px
+    width: 260px
+    text-align: center
+
+    span
+      color: #fff
+      font-size: 14px
+      display: block
+      margin-bottom: 6px
+
+  .action_button_green
+    background-color: #5d832f
+    border-color: #000 !important
+    margin-top: 10px
+    box-shadow: inset rgba(255, 255, 255, 0.3) 0 2px 0 0, inset rgba(0, 0, 0, 0.15) 0 -2px 0 0
