--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -52,17 +52,21 @@ a
   font-size: 26px
   font-weight: normal
   text-align: center
-  margin-top: 25px
+  margin-top: 35px
+  margin-bottom: -20px
 
 .intro-starts em
-  font-style: normal
   letter-spacing: normal
   display: block
   color: #435971
   text-align: center
-  text-transform: uppercase
-  margin-top: 5px
-  text-indent: -99999px
+  font:
+    size: 190px
+    style: normal
+    weight: normal
+    family: 'Fjalla One', Helvetica, sans-serif
+  line-height: 1em
+  margin-top: 10px
 
 .intro-title
   width: 90%
@@ -73,7 +77,7 @@ a
   text-align: center
   display: block
   width: 500px
-  margin: 25px auto 0
+  margin: 0 auto 0
 
 .world-map
   width: 100%
@@ -265,9 +269,9 @@ footer
     font-size: 26px
     margin-top: 2%
 
-  .intro-starts em
-    margin-top: .5%
-    text-indent: -99999px
+    em
+      font-size: 85px
+      margin-bottom: 20px
 
   .intro-title
     width: 90%
@@ -397,6 +401,10 @@ footer
     margin-top: 10px
     padding-left: 0px
     line-height: 14px
+
+    em
+      font-size: 55px
+      margin-bottom: 20px
 
     span
       width: 95%
