--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -2,14 +2,15 @@
 %html
   %head
     %title= strip_tags t("campaigns.100m.tagline")
+    %link{href: "http://fonts.googleapis.com/css?family=Fjalla+One&subset=latin,cyrillic-ext,cyrillic,greek-ext,vietnamese,latin-ext", rel: "stylesheet", type: "text/css"}
+    %link{rel: "shortcut icon", href:"/favicon.ico"}
+    %meta{charset:"utf-8"}
+    %meta{name: "viewport", content: "width=device-width, target-densitydpi=160, initial-scale=1.0"}
     = stylesheet_link_tag "campaigns/100m"
     = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"
     = javascript_include_tag "campaigns/100m/jquery.counter.js"
     = javascript_include_tag "campaigns/100m/jquery.countdown.min.js"
     = render '/shared/google_analytics'
-    %link{rel: "shortcut icon", href:"/favicon.ico"}
-    %meta{charset:"utf-8"}
-    %meta{name: "viewport", content: "width=device-width, target-densitydpi=160, initial-scale=1.0"}
   %body
 
     %article
@@ -20,7 +21,6 @@
           = t("campaigns.100m.logo")
         %h1.intro-starts
           = t("campaigns.100m.tagline").html_safe
-        %img.intro-title{ src: "/assets/campaigns/100m/100m.png", alt: "It starts with 100 million"}
         %img.world-map{ src: "/assets/campaigns/100m/bg.jpg", alt: "Map of the world"}
         %p.intro-copy
           = t("campaigns.100m.intro")
