Localized bible icons.

--- a/app/views/campaigns/100million.html.haml
+++ b/app/views/campaigns/100million.html.haml
@@ -117,7 +117,7 @@
           %p= t("campaigns.100m.body.p4")
 
       %footer
-        = image_tag "campaigns/100m/app-icon.png", class: "ad-img"
+        = image_tag localized_bible_icon, class: "ad-img"
 
         %p.ad-title
           = t("campaigns.100m.ad.title")
