--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -227,13 +227,13 @@ footer
   color: #dedede
 
 .ad-title
-  padding: 15px 10px 3px 145px
+  padding: 15px 10px 3px 85px
   font-size: 18px
   font-weight: bold
   border-radius: 5px 5px 0 0
 
 .ad-copy
-  padding: 2px 10px 15px 145px
+  padding: 2px 10px 15px 85px
   font-size: 15px
   border-radius: 0 0 5px 5px
 
@@ -243,7 +243,7 @@ footer
 
 .ad-img
   display: block
-  margin: -10px 0 0 20px
+  margin: 12px 15px
   float: left
 
 
