Counters looking better.

--- a/app/assets/stylesheets/campaigns/100m.sass
+++ b/app/assets/stylesheets/campaigns/100m.sass
@@ -291,7 +291,7 @@ footer
     letter-spacing: .1em
 
   .share-btns
-    padding-top: 2em
+    margin-top: 1em
 
   .share-fb, .share-tw, .share-em
     float: none
@@ -324,6 +324,31 @@ footer
     padding: 8px 0px 8px 34%
     background-position: 32% center !important
     text-align: left
+
+
+
+  #date_countdown
+    clear: both
+    margin: 20px auto 20px
+    overflow: hidden
+    width: 100%
+    color: #96999D
+
+    .countdown_section
+      float: left
+      width: 24%
+      display: block
+      border-left: 1px solid #435971
+      padding: 0
+      text-align: center
+      text-transform: uppercase
+
+    .countdown_section:first-child
+      border-left: none
+
+    .countdown_amount
+      font-size: 34px
+
 
 
   // ---- Ticker
@@ -360,7 +385,6 @@ footer
   #counter
     background-position: 0px 30px
     background-size: 100%
-    width: 75%
     margin: 0 auto
     margin-top: 20px
 
@@ -472,32 +496,11 @@ footer
 
   // ---- Counter
 
-  #date_countdown
-    clear: both
-    margin: 50px auto 20px
-    overflow: hidden
-    width: 100%
-    color: #96999D
-
-    .countdown_section
-      float: left
-      width: 24%
-      display: block
-      border-left: 1px solid #435971
-      padding: 0
-      text-align: center
-      text-transform: uppercase
-
-    .countdown_section:first-child
-      border-left: none
-
-    .countdown_amount
-      font-size: 34px
-
   #counter
     margin-top: 20px
     background-position: 0px 30px
     background-size: 100%
+    width: auto
 
     .part
       margin-left: 4%
